@@ -111,6 +111,7 @@
             <th>Owner</th>
             <th>Group</th>
             <th>Size</th>
+            <th>Last Modified</th>
             <th>Replication</th>
             <th>Block Size</th>
             <th>Name</th>
@@ -123,6 +124,7 @@
             <td>{owner}</td>
             <td>{group}</td>
             <td>{length|fmt_bytes}</td>
+            <td>{#helper_date_tostring value="{modificationTime}"/}</td>
             <td>{replication}</td>
             <td>{blockSize|fmt_bytes}</td>
             <td><a style="cursor:pointer" inode-type="{type}" class="explorer-browse-links" inode-path="{pathSuffix}">{pathSuffix}</a></td>
